# cpputest-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  EventLog.h  EventLogTest.cpp  comandos  commandos  main.cpp  teste
CommandLineParser/: CMakeLists.txt  CommandLineParser.h
lib/: CMakeLists.txt
lib/CommandLineParser/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h
tests/: CMakeLists.txt
tests/TestCommandLineParser/: TestCommandLineParser.cpp
tests/TestExample/: TestExample.cpp
